Fix some alignments

--- a/module2-solution/css/external.css
+++ b/module2-solution/css/external.css
@@ -1,3 +1,9 @@
+* {
+  box-sizing: border-box;
+ /* margin: 0;
+  padding: 0;*/
+}
+
 body {
   font-family: Arial;
 }
@@ -12,12 +18,6 @@ h1 {
 }
 
 /********** Base styles **********/
-* {
-  box-sizing: border-box;
- /* margin: 0;
-  padding: 0;*/
-}
-
 p {
   clear: both;
 
@@ -67,15 +67,15 @@ p {
 .desc {
 	float: left;
 
-	width: 97.7%;
+	width: 93%;
 
-    background-color: #999999;
+  background-color: #999999;
 
-    border: 3px solid black;	
+  border: 3px solid black;	
 
 	margin-left: 15px;
-    margin-right: 10x;
-    margin-bottom: 15px;    
+  margin-right: 15px;
+  margin-bottom: 15px;    
 }
 
 /********** Desktop devices only **********/
@@ -142,7 +142,7 @@ p {
     width: 41.66%;
   }
   .col-md-6 {
-    width: 48%;
+    width: 45%;
   }
   .col-md-7 {
     width: 58.33%;
